--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,6 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'checkstyle'
 apply plugin: "jacoco"
-apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-    }
-}
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
@@ -34,14 +23,6 @@ ext {
     hamcrestVersion = '1.3'
     javacvVersion = '0.11'
     reflectionVersion = '0.9.9'
-    limits = [
-            'instruction': 80,
-            'branch'     : 80,
-            'line'       : 80,
-            'complexity' : 80,
-            'method'     : 80,
-            'class'      : 80
-    ]
 }
 
 dependencies {
@@ -115,60 +96,6 @@ task uberjar(type: Jar, dependsOn: jar) {
 
 check.dependsOn jacocoTestReport
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar, javadocJar
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            if (plugins.hasPlugin('war')) {
-                from components.web
-            } else {
-                from components.java
-            }
-
-            artifact sourcesJar
-            artifact javadocJar
-        }
-    }
-}
-
-Properties properties = new Properties()
-try {
-    properties.load(project.rootProject.file('local.properties').newDataInputStream())
-} catch (Exception ex) {
-
-}
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-
-    publications = ['mavenJava']
-
-    dryRun = false
-    publish = true
-    pkg {
-        repo = 'maven'
-        name = project.name
-        websiteUrl = 'https://github.com/htynkn/jviff'
-        issueTrackerUrl = 'https://github.com/bintray/bintray-examples/issues'
-        vcsUrl = 'https://github.com/htynkn/jviff.git'
-        licenses = ['Apache-2.0']
-        labels = ['visual', 'selenium']
-        publicDownloadNumbers = true
-        version {
-            name = project.version
-        }
-    }
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
 }
