only signing when upload archives

--- a/build.gradle
+++ b/build.gradle
@@ -143,6 +143,7 @@ uploadArchives {
 }
 
 signing {
+    required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
 }
 
