--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.internal.os.OperatingSystem
+
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'checkstyle'
@@ -16,6 +18,7 @@ buildscript {
 
     dependencies {
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.3.1'
+        classpath "net.sf.proguard:proguard-gradle:5.2.1"
     }
 }
 
@@ -44,7 +47,6 @@ dependencies {
             "com.google.guava:guava:$guavaVersion",
             "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion",
             "org.slf4j:slf4j-simple:$slf4jVersion",
-            "org.reflections:reflections:$reflectionVersion",
             "commons-cli:commons-cli:$cliVersion"
     )
     compile("org.seleniumhq.selenium:selenium-java:$seleniumVersion") {
@@ -187,8 +189,43 @@ jar {
     }
 }
 
+task proguard(type: proguard.gradle.ProGuardTask, dependsOn: uberjar) {
+    injars uberjar.archivePath
+    outjars uberjar.archivePath.toString().replace(uberjar.classifier, 'standalone')
+    libraryjars javaRtLib()
+    libraryjars jsseLib()
+    configuration file("$rootDir/proguard.pro")
+}
+
+task proguardCheck(type: Test, dependsOn: proguard) {
+    testLogging { exceptionFormat "full" }
+    classpath = classpath - files(sourceSets.main.output.classesDir) - files(configurations.runtime) +
+            files(proguard.outputs.files.singleFile)
+}
+uploadArchives.dependsOn proguardCheck
+
 artifacts {
     archives jar
     archives javadocJar
     archives sourcesJar
+    archives proguard.outputs.files.singleFile
+}
+
+def javaRtLib() {
+    javaLibPath("/lib/rt.jar", "/../Classes/classes.jar")
+}
+
+def jsseLib() {
+    javaLibPath("/lib/jsse.jar", "/../Classes/jsse.jar")
+}
+
+def javaLibPath(lib, osxLib) {
+    def javaBase = System.properties["java.home"];
+    def target = lib
+    if (OperatingSystem.current().isMacOsX()) {
+        if (!new File(javaBase + target).exists()) {
+            target = osxLib
+        }
+    }
+    javaBase + target
 }
