--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,9 @@ dependencies {
             "junit:junit:4.11",
             "org.hamcrest:hamcrest-library:1.3",
             'org.mockito:mockito-core:1.10.19',
-            'org.eclipse.jetty:jetty-server:9.2.10.v20150310'
+            'org.eclipse.jetty:jetty-server:9.2.10.v20150310',
+            'org.powermock:powermock-module-junit4:1.6.2',
+            'org.powermock:powermock-api-mockito:1.6.2'
     )
 }
 
