--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ import org.gradle.internal.os.OperatingSystem
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'checkstyle'
-apply plugin: "jacoco"
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'cobertura'
 apply plugin: 'com.github.kt3k.coveralls'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
@@ -18,6 +18,7 @@ buildscript {
 
     dependencies {
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.3.1'
+        classpath 'net.saliman:gradle-cobertura-plugin:2.2.8'
         classpath "net.sf.proguard:proguard-gradle:5.2.1"
     }
 }
@@ -78,17 +79,6 @@ checkstyle {
     configProperties.checkstyleConfigDir = checkstyleConfigDir
 }
 
-jacoco {
-    toolVersion = "0.7.4.201502262128"
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        html.enabled true
-    }
-}
-
 task uberjar(type: Jar, dependsOn: jar) {
     classifier = 'uber'
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
@@ -111,7 +101,7 @@ task uberjar(type: Jar, dependsOn: jar) {
     }
 }
 
-check.dependsOn jacocoTestReport
+cobertura.coverageFormats = ['html', 'xml']
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
