不使用插件依赖文件

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import org.apache.commons.io.FileUtils
 import org.gradle.internal.os.OperatingSystem
 
 import java.text.DecimalFormat
@@ -9,7 +10,6 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'cobertura'
 apply plugin: 'com.github.kt3k.coveralls'
-apply plugin: 'de.undercouch.download'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
@@ -23,7 +23,7 @@ buildscript {
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
         classpath 'net.saliman:gradle-cobertura-plugin:2.2.8'
         classpath "net.sf.proguard:proguard-gradle:5.2.1"
-        classpath 'de.undercouch:gradle-download-task:1.2'
+        classpath 'commons-io:commons-io:2.4'
     }
 }
 
@@ -244,26 +244,21 @@ tasks.withType(JavaCompile) {
 
 task downloadFrontDependencies() {
     new File("${buildDir}/tmp/front").mkdirs();
-    download {
-        src([
-                'https://code.jquery.com/jquery-2.1.4.min.js',
-                'http://d.bootcss.com/bootstrap-3.3.5-dist.zip'
-        ])
-        dest "${buildDir}/tmp/front"
-    }
+    FileUtils.copyURLToFile(new URL('https://code.jquery.com/jquery-2.1.4.min.js'),
+            new File("${buildDir}/tmp/front/jquery.js"))
+    FileUtils.copyURLToFile(new URL('https://github.com/twbs/bootstrap/releases/download/v3.3.5/bootstrap-3.3.5-dist.zip'),
+            new File("${buildDir}/tmp/front/bootstrap.zip"))
 }
 
 task dealFrontDependencies(dependsOn: downloadFrontDependencies) {
+    delete 'src/main/resources/static'
     copy {
-        from zipTree(new File("${buildDir}/tmp/front/bootstrap-3.3.5-dist.zip"))
+        from zipTree(new File("${buildDir}/tmp/front/bootstrap.zip"))
         into 'src/main/resources/static'
     }
     copy {
-        from "${buildDir}/tmp/front/jquery-2.1.4.min.js"
+        from "${buildDir}/tmp/front/jquery.js"
         into "src/main/resources/static"
-        rename 'jquery-(.*).js', 'jquery.js'
     }
     ant.move(file: "src/main/resources/static/bootstrap-3.3.5-dist", tofile: "src/main/resources/static/bootstrap")
 }
-
-uploadArchives.dependsOn dealFrontDependencies
