--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'cobertura'
 apply plugin: 'com.github.kt3k.coveralls'
+apply plugin: 'com.github.ben-manes.versions'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
@@ -24,6 +25,7 @@ buildscript {
         classpath 'net.saliman:gradle-cobertura-plugin:2.2.8'
         classpath "net.sf.proguard:proguard-gradle:5.2.1"
         classpath 'commons-io:commons-io:2.4'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
     }
 }
 
