--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ jdk:
   - openjdk7
   - openjdk6
 before_install:
+  - chmod +x gradlew
   - sudo apt-get update -qq
   - sudo apt-get install -y firefox
-script:
-  - chmod +x ./gradlew
-  - ./gradlew proguardCheck
+script: - ./gradlew proguardCheck
