--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ before_install:
   - chmod +x gradlew
   - sudo apt-get update -qq
   - sudo apt-get install -y firefox
-script: - ./gradlew proguardCheck
+script:
+  - ./gradlew proguardCheck
