--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ jdk:
   - oraclejdk8
   - oraclejdk7
   - openjdk7
-  - openjdk6
 before_install:
   - chmod +x gradlew
-  - sudo apt-get update -qq
-  - sudo apt-get install -y firefox
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 script:
-  - ./gradlew proguardCheck
+  - ./gradlew clean test proguardCheck
