--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ before_install:
   - "chmod +x gradlew"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "sudo apt-get install python-software-properties"
+  - "sudo apt-add-repository ppa:brightbox/ruby-ng"
+  - "sudo apt-get update"
+  - "sudo apt-get install ruby2.2 ruby2.2-dev"
   - "gem install chef"
   - "sudo mkdir /var/chef/cookbooks/"
   - "knife cookbook site download firefox"
