--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - "sudo apt-get install python-software-properties"
-  - "sudo apt-add-repository ppa:brightbox/ruby-ng"
+  - "sudo apt-add-repository -y ppa:brightbox/ruby-ng"
   - "sudo apt-get update"
   - "sudo apt-get install ruby2.2 ruby2.2-dev"
   - "gem install chef"
@@ -18,5 +18,6 @@ before_install:
   - "sudo tar xvfz firefox-*.tar.gz -C /var/chef/cookbooks/"
   - "echo \"cookbook_path [ '/var/chef/cookbooks/' ]\" >> solo.rb"
   - "sudo chef-solo -o 'recipe[firefox]'"
+  - "firefox -v"
 script:
   - ./gradlew clean proguardCheck
