--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ before_install:
   - "chmod +x gradlew"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - "sudo apt-get install python-software-properties"
-  - "sudo apt-add-repository -y ppa:brightbox/ruby-ng"
-  - "sudo apt-get update"
-  - "sudo apt-get install ruby2.2 ruby2.2-dev"
+  - "rvm install 2.1.1"
+  - "rvm install 2.1.1-dev"
+  - "rvm use 2.1.1"
   - "gem install chef"
   - "sudo mkdir /var/chef/cookbooks/"
   - "knife cookbook site download firefox"
   - "sudo tar xvfz firefox-*.tar.gz -C /var/chef/cookbooks/"
   - "echo \"cookbook_path [ '/var/chef/cookbooks/' ]\" >> solo.rb"
+  - "rvm -v"
   - "sudo chef-solo -o 'recipe[firefox]'"
   - "firefox -v"
 script:
