使用超级用户

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ before_install:
   - "chmod +x gradlew"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - "rvm install 2.1.1"
-  - "rvm install 2.1.1-dev"
-  - "rvm use 2.1.1"
-  - "gem install chef"
+  - "sudo rvm install 2.1.1"
+  - "sudo rvm install 2.1.1-dev"
+  - "sudo rvm use 2.1.1"
+  - "sudo gem install chef"
   - "sudo mkdir /var/chef/cookbooks/"
   - "knife cookbook site download firefox"
   - "sudo tar xvfz firefox-*.tar.gz -C /var/chef/cookbooks/"
