--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,12 @@ jdk:
   - oraclejdk8
   - oraclejdk7
   - openjdk7
-
+os:
+  - linux
+  - osx
 before_install:
-  - "chmod +x gradlew"
+  - chmod +x gradlew
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - "rvm install 2.1.1"
-  - "rvm install 2.1.1-dev"
-  - "rvm use 2.1.1"
-  - "gem install chef"
-  - "sudo mkdir /var/chef/cookbooks/"
-  - "knife cookbook site download firefox"
-  - "sudo tar xvfz firefox-*.tar.gz -C /var/chef/cookbooks/"
-  - "echo \"cookbook_path [ '/var/chef/cookbooks/' ]\" >> solo.rb"
-  - "rvm -v"
-  - "sudo chef-solo -o 'recipe[firefox]'"
-  - "firefox -v"
 script:
   - ./gradlew clean proguardCheck
