--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ ext {
     jacksonVersion = '2.5.2'
     slf4jVersion = '1.7.12'
     cliVersion = '1.2'
-    junitVersion = '4.11'
+    junitVersion = '4.12'
     hamcrestVersion = '1.3'
     thymeleafVersion = '2.1.4.RELEASE'
 }
@@ -60,11 +60,12 @@ dependencies {
         exclude group: 'org.eclipse.jetty'
     }
     testCompile(
-            "junit:junit:4.11",
+            "junit:junit:$junitVersion",
             "org.hamcrest:hamcrest-library:1.3",
             'org.mockito:mockito-core:1.10.19',
             'org.eclipse.jetty:jetty-server:9.2.10.v20150310',
             'org.powermock:powermock-module-junit4:1.6.2',
+            'com.github.stefanbirkner:system-rules:1.12.0',
             'org.powermock:powermock-api-mockito:1.6.2'
     )
 }
